@@ -1,3 +1,7 @@
+2007-03-15  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/isakmp.c: Consider a negociation timeout when
+	retry_counter is <=0 instead of < 0.
+
 2007-02-27  Matthew Grooms  <mgrooms@shrew.net>
 	* src/racoon/ipsec_doi.c: add logic to match ip address ids to
 	  ip subnet ids when appropriate. reported by Yvan.
